test/Runner/errors/tests/MI/Seed/Test.seedconf2.js
eve("Suite", () => {
	seed('Seed', () => {

	}, "foo");
});